--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,6 +11,6 @@
     <h1>Olá, Mundo lindo!</h1>
     <hr>
     <p>lorem, não sei o que é isso de lorem mas os atalhos não funcionam no VS Code</p>
-    <p>Lorem, atalho so lorem nao funciona, arff.</p>
+    <p>Lorem, atalho do lorem nao funciona, arff.</p>
 </body>
 </html>
